fix overflow

--- a/api/public/css/stylesheet.css
+++ b/api/public/css/stylesheet.css
@@ -14,7 +14,7 @@ html, body {
 
 .video {
     width: 100%;
-    overflow: auto;
+    /* overflow: auto; */
 }
 
 .mainvideo {
